fix: 리뷰 이미지 출력 오류 수정